# simatch

./: .gitignore  BUG  README.md  TODO  ball_gazebo.cc  ball_gazebo.hh  configure  gazebo7_install.sh  gazebo_config  nubot_gazebo.cc  nubot_gazebo.hh  sim_config  sim_config.yaml  simatch_cyan.launch  simatch_magenta.launch  vector_angle.hh
doc/: rtdb.doc  (+7 more)
src/auto_referee/: CMakeLists.txt  TODO  package.xml
src/auto_referee/src/: Helpers.cc  Helpers.hh  Quaternion.cc  Quaternion.hh  auto_referee.cpp  auto_referee.h
src/coach4sim/: CMakeLists.txt  cyan_coach.sh  magenta_coach.sh  package.xml
src/coach4sim/include/nubot_coach/: coach2refbox.h  coach_dialog.h  json_parse.h  robot2coach.h
src/coach4sim/launch/: cyan_sim.launch  magenta_sim.launch  nubot_coach.launch
src/coach4sim/src/: coach2refbox.cpp  coach_dialog.cpp  coach_dialog.ui  main.cpp  robot2coach.cpp
src/gazebo_visual/nubot_gazebo/: CMakeLists.txt
src/gazebo_visual/nubot_gazebo/config/: global_config.yaml
src/gazebo_visual/nubot_gazebo/launch/: game_ready.launch
src/gazebo_visual/nubot_gazebo/scripts/: robot_up.sh  set_ball_pos.sh
src/gazebo_visual/nubot_gazebo/src/: ball_gazebo.cc  ball_gazebo.hh  nubot_gazebo.cc  nubot_gazebo.cc.autosave  nubot_gazebo.hh  nubot_teleop_keyboard.cc  nubot_teleop_keyboard.hh  rival_gazebo.cc  rival_gazebo.hh  vector_angle.hh
src/gazebo_visual/nubot_gazebo/worlds/: robocup15MSL.world
src/nubot_coach/src/: CMakeLists.txt  cyan_coach.sh  magenta_coach.sh  package.xml
src/nubot_coach/src/include/nubot_coach/: coach2refbox.h  coach_dialog.h  packet2Refbox.h  robot2coach.h
src/nubot_coach/src/launch/: nubot_coach.launch
src/nubot_coach/src/source/: source.qrc
src/nubot_coach/src/src/: coach2refbox.cpp  coach_dialog.cpp  coach_dialog.ui  json_parse.cpp  main.cpp  packet2Refbox.cpp  robot2coach.cpp
src/robot_code/nubot/: CMakeLists.txt  package.xml
src/robot_code/nubot/nubot_common/: CMakeLists.txt  formation.launch  nubot.launch
src/robot_code/nubot/nubot_common/msgs/: RobotInfo.msg  WorldModelInfo.msg
src/robot_code/nubot/nubot_control/cfg/: nubotcontrol.cfg
src/robot_code/nubot/nubot_control/launch/: nubot_control.launch
src/robot_code/nubot/nubot_control/src/: assistrole.cpp  fieldinformation.cpp  goaliestrategy.cpp  midfieldrole.cpp  passstrategy.cpp  role_assignment.cpp  staticpass.cpp  subtargets.cpp
src/robot_code/nubot/simulation_interface/: package.xml
src/robot_code/nubot/simulation_interface/src/: strategy_info.cpp
src/robot_code/nubot/world_model/: package.xml
src/robot_code/nubot/world_model/config/: comm.conf  example.conf  nubot.conf  rtdb.ini
src/robot_code/nubot/world_model/launch/: world_model.launch
src/robot_code/nubot/world_model/rtdb/: CMakeLists.txt  comm.cpp  rtdb_api.cpp  write.cpp
src/robot_code/nubot/world_model/rtdb/parser/: Makefile  rtdb_configuration.h.in  rtdb_errors.h  rtdb_functions.h  rtdb_ini_creator.h  xrtdb.c  xrtdb.lex  xrtdb.tab.h  xrtdb.y
src/robot_code/nubot/world_model/src/: ball.cpp  iAuction.cpp  main.cpp  obstacles.cpp  robot.cpp
src/robot_code/nubot_common/: .newmagenta.sh.swo  CMakeLists.txt  cyan_hw_robot.sh  cyan_robot.sh  magenta_hw_robot.sh  magenta_robot.sh  nubot.launch
src/robot_code/nubot_common/include/: Angle.hpp  Circle.hpp  DPoint.hpp  Fieldinformation.h  Fieldinformation.h.old  Line.hpp  core.hpp
src/robot_code/nubot_common/launch/: cyan.launch  magenta.launch
src/robot_code/nubot_common/msgs/: ActionCmd.msg  Angle.msg  BallInfo.msg  BallIsHolding.msg  CoachInfo.msg  CoachWorldModelInfo.msg  ObstaclesInfo.msg  ObstaclesInfo3d.msg  OminiVisionInfo.msg  PPoint.msg  Point2d.msg  Relocation.msg  RobotInfo.msg  SendingOff.msg  Teleop_joy.msg  VelCmd.msg  object_info.msg
src/robot_code/nubot_common/srv/: AutoRef.srv  BallHandle.srv  DribbleId.srv  Shoot.srv
src/robot_code/nubot_control/: CMakeLists.txt  package.xml
src/robot_code/nubot_control/include/nubot/nubot_control/: activerole.h  assistrole.h  behaviour.hpp  bezier.h  common.hpp  define.hpp  dribblestate.hpp  fieldinformation.h  goaliestrategy.h  midfieldrole.h  passstrategy.h  plan.h  plan.hpp  role_assignment.h  staticpass.h  strategy.hpp  subtargets.h  world_model_info.h
src/robot_code/nubot_control/src/: activerole.cpp  behaviour.cpp  bezier.cpp  fieldinformation.cpp  nubot_control.cpp  passiverole.cpp  plan.cpp  staticpass.cpp  strategy.cpp  subtargets.cpp
src/robot_code/nubot_hwcontroller/: CMakeLists.txt  cyan_hwctr.sh  magenta_hwctr.sh  package.xml
src/robot_code/nubot_hwcontroller/cfg/: controller.cfg
src/robot_code/nubot_hwcontroller/cfg/nubot/: DribblePara.txt
src/robot_code/nubot_hwcontroller/cfg/nubot2/: DribblePara.txt
src/robot_code/nubot_hwcontroller/cfg/nubot3/: DribblePara.txt
src/robot_code/nubot_hwcontroller/cfg/nubot4/: DribblePara.txt
src/robot_code/nubot_hwcontroller/cfg/nubot5/: DribblePara.txt
src/robot_code/nubot_hwcontroller/include/nubot_hwcontroller/: nubot_hwcontroller_node.h
src/robot_code/nubot_hwcontroller/launch/: nubot_hwcontroller.launch
src/robot_code/nubot_hwcontroller/src/: nubot_hwcontroller_node.cpp
src/robot_code/simulation_interface/: CMakeLists.txt
src/robot_code/simulation_interface/include/nubot/simulation_interface/: multicast.h
src/robot_code/simulation_interface/src/: coach_robot_comm_RTDB.cpp  coachinfo_pub_node.cpp  multicast.cpp  strategy_info.cpp
src/robot_code/world_model/: CMakeLists.txt
src/robot_code/world_model/config/: nubot.conf  rtdb.ini  rtdb_parser
src/robot_code/world_model/include/world_model/: MTTracker.h  ball.h  obstacles.h  robot.h  teammatesinfo.h  world_model.h
src/robot_code/world_model/rtdb/: comm.cpp  multicast.cpp  read.cpp  rtdb_api.cpp  rtdb_user.h  write.cpp
src/robot_code/world_model/rtdb/parser/: CMakeLists.txt  README  rtdb_errors.c  rtdb_functions.c  rtdb_ini_creator.c  rtdb_structs.h  rtdb_user_creator.c  rtdb_user_creator.h  xrtdb.tab.c
src/robot_code/world_model/src/: MTTracker.cpp  ball.cpp  iAuction.cpp  main.cpp  multicast.cpp  obstacles.cpp  robot.cpp  strategyinfo.cpp  world_model.cpp
(+981 files in other folders)
