<?xml version="1.0"?>
<package>
  <name>auto_referee</name>
  <version>0.1.0</version>
  <description>automatic referee for robocup middle size league</description>
  <maintainer email="weijia.yao.nudt@gmail.com">Weijia Yao</maintainer>
  <license>BSD</license>
  <author email="weijia.yao.nudt@gmail.com">Weijia Yao</author>

  <buildtool_depend>catkin</buildtool_depend>  
 
  <build_depend>roscpp</build_depend>
  <build_depend>nubot_common</build_depend>
  <build_depend>nubot_control</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nubot_common</run_depend>
  <run_depend>nubot_control</run_depend>
  <run_depend>gazebo_msgs</run_depend>

</package>

