<package>
  <name>nubot</name>
  <version>0.0.1</version>
  <description>
    nubot
  </description>
  
  <license>BSD</license>

  <maintainer email="nubot.nudt@gmail.com">nubot.nudt</maintainer>
  <maintainer email="nubot.nudt@outlook.com">nubot.nudt</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>nubot_common</run_depend>
  <run_depend>omni_vision</run_depend>
  <run_depend>world_model</run_depend>
  <run_depend>nubot_hwcontroller</run_depend>
  <run_depend>nubot_control</run_depend>
 <export>
    <metapackage/>
  </export>
</package>
