<?xml version="1.0"?>
<package>
  <name>world_model</name>
  <version>0.0.0</version>
  <description>The world_model package</description>
  <maintainer email="nubot.nudt@gmail.com">nubot</maintainer>
  <maintainer email="nubot.nudt@outlook.com">nubot</maintainer>
  <author email="xiongdan@nudt.edu.cn">xiong dan </author>
  <license>BSD</license>
  <url type="website">https://github.com/nubot-nudt/nubot_ws</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nubot_common</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
   <!--<build_depend>rtdb</build_depend> -->
  <run_depend>cmake_modules</run_depend>
  <run_depend>nubot_common</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_generation</run_depend>
 <!--  <run_depend>rtdb</run_depend> -->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
